--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/readjson.html
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/readjson.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript" src="js/jquery.js"></script>
-	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
-    <title>Barnstable Academy Fitness Tracker</title>
+    <title>Convert JSON Data to HTML Table</title>
     <style>
         th, td, p, input {
             font:14px Verdana;
@@ -15,65 +13,15 @@
             padding: 2px 3px;
             text-align: center;
         }
-#h1 {
-    font-family: triplex-sans, sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 255%;
-    color: #FFFFFF;
-}
         th {
             font-weight:bold;
         }
-    #results-table {
-    color: #000000;
-}
-    #results-th-1, #results-th-0, #results-th-2 {
-    background-color: #DB883D;
-    border-color: #000000;
-    border-width: medium;
-		}
-	#results-tr-0, #results-tr-1, #results-tr-2, #results-tr-3, #results-tr-4, #results-tr- {
-    background-color: #FFFFFF;
-    border-color: #000000;
-    border-width: ;
-    border-width: medium;
-		}
-    #menu {
-    height: 5%;
-    background-color: #DB883D;
-    width: 100%;
-}
-	#header {
-    height: 5%;
-    background-color: #DB883D;
-    width: 100%;
-    text-align: center;
-}
-    #form {
-    padding-top: 5px;
-    float: left;
-    width: 33%;
-}
-#leaderboard-text {
-	padding-top: 5px;
-    width: 33%;
-    float: left;
-}
     </style>
 </head>
-<body onload="CreateTableFromJSON()">
-<div id="header"><h1 id="h1">BARNSTABLE ACADEMY FITNESS TRACKER</h1></div>
-	<div id="menu">
-		<div id="form" align="center"><a href="form.html"><img src="img/format-list-bulleted.png" width="42" hight="42" border="0" alt="form"></a></div>
-		<div id="leaderboard-text" align="center"><img src="img/format-list-numbered.png" width="42" hight="42" border="0" alt="leaderboard"></div>
-		<div id="account" align="center"><img src="img/account.png" width="42" hight="42" border="0" alt="leaderboard"></div>
-	
-	</div>
-	<div id="winers-table">
+<body>
+    <body onload="CreateTableFromJSON()">
     <p id="showData"></p>
-	</div>
-
+</body>
 
 <script>
     function CreateTableFromJSON() {
@@ -94,7 +42,6 @@
 
         // CREATE DYNAMIC TABLE.
         var table = document.createElement("table");
-			table.setAttribute("id", "results-table");
 
         // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
 
@@ -102,7 +49,6 @@
 
         for (var i = 0; i < col.length; i++) {
             var th = document.createElement("th");      // TABLE HEADER.
-			th.setAttribute("id", "results-th-"+i);
             th.innerHTML = col[i];
             tr.appendChild(th);
         }
@@ -114,7 +60,6 @@
 
             for (var j = 0; j < col.length; j++) {
                 var tabCell = tr.insertCell(-1);
-				tabCell.setAttribute("id", "results-tr-"+i);
                 tabCell.innerHTML = data[i][col[j]];
             }
         }
@@ -126,5 +71,3 @@
     }
   )};
 </script>
-</body>
-</html>
