--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/index.html
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/index.html
@@ -3,25 +3,98 @@
 	<head>
 	<!-- include other css files -->
 	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
+	<link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/form.css">
 	<!-- include other JS files -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
-<script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<!--<script src="cordova.js"></script>-->
+<script>
+	function bypass(){
+		if (localStorage.getItem("acct") !== null) {
+  		window.location.href = "form.html";
+}
+	}
+	function submit(){
+    var email= $.trim($("#username-input").val());
+    var password= $.trim($("#password-input").val());
+    var loginString ="email="+email+"&password="+password+"&login=";
+	var url = "http://fit-track.octs.tech/phonegap/database/login.php";
+    $.ajax({
+        type: "POST",crossDomain: true, cache: false,
+        url: url,  
+        data: loginString,
+        success: function(data){
+            if(data == "1") {
+				alert("Incorrect password");
+            }
+            else if(data == "server error")
+            {
+                alert("Server error");
+            }
+			else {
+				var storage = window.localStorage;
+				console.log(data);
+ 				storage.setItem("acct", JSON.stringify(data));
+                window.location.href = "form.html";
+				console.log(storage.getItem("acct"));
+			}
+        }
+    });
+};
+	</script>
+	<!-- MDC JS -->
+	<script type="module">
+	mdc.ripple.MDCRipple.attachTo(document.querySelector('.mdc-button--raised'));
+	mdc.ripple.MDCRipple.attachTo(document.querySelector('.mdc-button'));
+	mdc.textField.MDCTextField.attachTo(document.querySelector('.username'));
+	mdc.textField.MDCTextField.attachTo(document.querySelector('.password'));
+	// const MDCTextField = mdc.textfield.MDCTextField.attachTo(document.querySelector('.username'));
+	</script>
+	<title>Barnstable Academy Fitness Tracker</title>
 	</head>
-	
-	<body>
-	<!--<header class="mdc-top-app-bar">
-  		<div class="mdc-top-app-bar__row">
-    		<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-      			<span class="mdc-top-app-bar__title">Barnstable Fitness Tracker: Login</span>
-    		</section>
-  		</div>
-	</header>
--->
-	<div>
-	<a href="form.html">link to main</a>
-	</div>
-	</body>
+	<body onload="bypass()">
+    <div class="mdc-drawer-app-content">
+    <header class="mdc-top-app-bar app-bar" id="app-bar">
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <span class="mdc-top-app-bar__title">Barnstable Fitness Tracker</span>
+        </section>
+      </div>
+    </header>
+    <main class="main-content" id="main-content">
+      <div class="mdc-top-app-bar--fixed-adjust">
+		  
+		<div class="mdc-text-field username">
+  <input type="text" class="mdc-text-field__input" id="username-input" name="username">
+  <label class="mdc-floating-label" for="username-input">E-Mail</label>
+  <div class="mdc-line-ripple"></div>
+</div>
+<div class="mdc-text-field password">
+  <input type="password" class="mdc-text-field__input" id="password-input" name="password">
+  <label class="mdc-floating-label" for="password-input">Password</label>
+  <div class="mdc-line-ripple"></div>
+</div>  
+	<div class="button-container">
+  <button type="button" class="mdc-button register"  onclick="window.location.href='register.html'">
+    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__label">
+      Register
+    </span>
+  </button>
+  <button class="mdc-button mdc-button--raised login" onclick="submit()">
+    <div class="mdc-button__ripple"></div>
+    <span class="mdc-button__label">
+      Login
+    </span>
+  </button>
+</div>
+</div>
+</main>
+		</div>
+</body>
 </html>
