--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/register.html
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/register.html
@@ -14,32 +14,27 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<!--<script src="cordova.js"></script>-->
 <script>
-	function bypass(){
-		if (localStorage.getItem("acct") !== null) {
-  		window.location.href = "form.html";
-}
-	}
 	function submit(){
     var email= $.trim($("#username-input").val());
+	var name= $.trim($("#name-input").val());
     var password= $.trim($("#password-input").val());
-    var loginString ="email="+email+"&password="+password+"&login=";
-	var url = "http://fit-track.octs.tech/phonegap/database/login.php";
+    var loginString ="email="+email+"&password="+password+"&name="+name+"&register=";
+	var url = "http://fit-track.octs.tech/phonegap/database/reg.php";
     $.ajax({
         type: "POST",crossDomain: true, cache: false,
-        url: url,  
+        url: url,
         data: loginString,
         success: function(data){
             if(data == "1") {
-				alert("Incorrect password");
+				alert("Internal Server Error");
             }
-            else if(data == "server error")
+            else if(data == "2")
             {
-                alert("Server error");
+                alert("Account Already Exists");
             }
 			else {
 				var storage = window.localStorage;
-				console.log(data);
- 				storage.setItem("acct", JSON.stringify(data));
+ 				storage.setItem("acct", name);
                 window.location.href = "form.html";
 				console.log(storage.getItem("acct"));
 			}
@@ -52,12 +47,12 @@
 	mdc.ripple.MDCRipple.attachTo(document.querySelector('.mdc-button--raised'));
 	mdc.ripple.MDCRipple.attachTo(document.querySelector('.mdc-button'));
 	mdc.textField.MDCTextField.attachTo(document.querySelector('.username'));
+	mdc.textField.MDCTextField.attachTo(document.querySelector('.name'));
 	mdc.textField.MDCTextField.attachTo(document.querySelector('.password'));
-	// const MDCTextField = mdc.textfield.MDCTextField.attachTo(document.querySelector('.username'));
 	</script>
 	<title>Barnstable Academy Fitness Tracker</title>
 	</head>
-	<body onload="bypass()">
+	<body>
     <div class="mdc-drawer-app-content">
     <header class="mdc-top-app-bar app-bar" id="app-bar">
       <div class="mdc-top-app-bar__row">
@@ -74,22 +69,27 @@
   <label class="mdc-floating-label" for="username-input">E-Mail</label>
   <div class="mdc-line-ripple"></div>
 </div>
+	<div class="mdc-text-field name username" id="name-input-div">
+  <input type="text" class="mdc-text-field__input" id="name-input" name="name">
+  <label class="mdc-floating-label" for="name-input">Name</label>
+  <div class="mdc-line-ripple"></div>
+</div>
 <div class="mdc-text-field password">
   <input type="password" class="mdc-text-field__input" id="password-input" name="password">
   <label class="mdc-floating-label" for="password-input">Password</label>
   <div class="mdc-line-ripple"></div>
 </div>  
 	<div class="button-container">
-  <button type="button" class="mdc-button register"  onclick="window.location.href='register.html'">
+	<button type="button" class="mdc-button register"  onclick="window.location.href='index.html'">
     <div class="mdc-button__ripple"></div>
     <span class="mdc-button__label">
-      Register
+      Login
     </span>
   </button>
   <button class="mdc-button mdc-button--raised login" onclick="submit()">
     <div class="mdc-button__ripple"></div>
     <span class="mdc-button__label">
-      Login
+      Register
     </span>
   </button>
 </div>
