--- a/app-code/com.barnsatble.fit/www/readjson.html
+++ b/app-code/com.barnsatble.fit/www/readjson.html
@@ -68,11 +68,11 @@
 	<aside class="mdc-drawer mdc-drawer--dismissible">  
       <div class="mdc-drawer__content">
         <nav class="mdc-list">
-          <a class="mdc-list-item mdc-list-item--activated" href="form.html" aria-selected="true">
+          <a class="mdc-list-item" href="form.html" aria-selected="true">
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">post_add</i>
             <span class="mdc-list-item__text">Submit Steps</span>
           </a>
-          <a class="mdc-list-item" href="readjson.html">
+          <a class="mdc-list-item mdc-list-item--activated" href="readjson.html">
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">format_list_numbered</i>
             <span class="mdc-list-item__text">Leaderboard</span>
           </a>
