--- a/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/readjson.html
+++ b/app-code/com.barnsatble.fit/platforms/android/app/src/main/assets/www/readjson.html
@@ -5,6 +5,7 @@
 	<!-- include other css files -->
 	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
 	<link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+	<link href="css/readjson.css" rel="stylesheet">
 	<link href="css/readjson2.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- include other JS files -->
@@ -15,42 +16,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="cordova.js"></script>
     <title>Barnstable Academy Fitness Tracker</title>
-    <style>
-        th, td, p, input {
-            font:14px Verdana;
-        }
-        table, th, td
-        {
-            border: solid 1px #DDD;
-            border-collapse: collapse;
-            padding: 2px 3px;
-            text-align: center;
-        }
-* {
-  margin: 0;
-  /** Possibly padding too **/
-  padding: 0;
-}
-    #winers-table {
-    color: #000000;
-    padding-top: 1.5%;
-}
-    .tableHeading {
-    background-color: #DB883D;
-    border-color: #000000;
-    border-width: medium;
-		}
-	.tableRow {
-    background-color: #FFFFFF;
-    border-color: #000000;
-    border-width: ;
-    border-width: medium;
-		}
-    #results-heading {
-    font-size: 141%;
-    text-align: center;
-}
-    </style>
 	<script type="module">
 	const list = mdc.list.MDCList.attachTo(document.querySelector('.mdc-list'));
 	list.wrapFocus = true;
@@ -76,6 +41,10 @@
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">format_list_numbered</i>
             <span class="mdc-list-item__text">Leaderboard</span>
           </a>
+		  <a class="mdc-list-item" href="history.html">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">history</i>
+            <span class="mdc-list-item__text">History</span>
+          </a>
           <a class="mdc-list-item" href="account.html">
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">account_circle</i>
             <span class="mdc-list-item__text">Account</span>
@@ -96,16 +65,22 @@
 	<div class="mdc-top-app-bar--fixed-adjust">
 	<div id="winers-table" align="center" class="mdc-card">
 		<div align="center">
-		<h2 id="results-heading">Weekly Leaderboard</h2>
-    	<p id="showData">No One has submitted their steps this week. You can be the first!</p>
+		<h2 id="results-heading">Daily Leaderboard</h2>
+    	<p id="showData">No One has submitted their steps today. You can be the first!</p>
 		</div>
 	</div>
-
+	<div id="winers-table-week" align="center" class="mdc-card">
+		<div align="center">
+		<h2 id="results-heading-week">Weekly Leaderboard</h2>
+    	<p id="showData-week">No One has submitted their steps this week. You can be the first!</p>
+		</div>
+	</div>
 
 		</div>
     </main>
 <script>
     function CreateTableFromJSON() {
+		//run for day
         //get data
         var url="http://fit-track.octs.tech/phonegap/database/rank.php";
         $.getJSON(url, function(data){
@@ -153,7 +128,60 @@
         divContainer.innerHTML = "";
         divContainer.appendChild(table);
     }
-  )};
+  )
+
+//execute for week
+        //get data
+        var url="http://fit-track.octs.tech/phonegap/database/rank-week.php";
+        $.getJSON(url, function(data){
+        console.log(data);
+        // EXTRACT VALUE FOR HTML HEADER.
+        // ('Book ID', 'Book Name', 'Category' and 'Price')
+        var col = [];
+        for (var i = 0; i < data.length; i++) {
+            for (var key in data[i]) {
+                if (col.indexOf(key) === -1) {
+                    col.push(key);
+                }
+            }
+        }
+
+        // CREATE DYNAMIC TABLE.
+        var table = document.createElement("table");
+			table.setAttribute("id", "results-table");
+
+        // CREATE HTML TABLE HEADER ROW USING THE EXTRACTED HEADERS ABOVE.
+
+        var tr = table.insertRow(-1);                   // TABLE ROW.
+
+        for (var i = 0; i < col.length; i++) {
+            var th = document.createElement("th");      // TABLE HEADER.
+			th.setAttribute("class", "tableHeading");
+            th.innerHTML = col[i];
+            tr.appendChild(th);
+        }
+
+        // ADD JSON DATA TO THE TABLE AS ROWS.
+        for (var i = 0; i < data.length; i++) {
+
+            tr = table.insertRow(-1);
+
+            for (var j = 0; j < col.length; j++) {
+                var tabCell = tr.insertCell(-1);
+				tabCell.setAttribute("class", "tableRow");
+                tabCell.innerHTML = data[i][col[j]];
+            }
+        }
+
+        // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
+        var divContainer = document.getElementById("showData-week");
+        divContainer.innerHTML = "";
+        divContainer.appendChild(table);
+    }
+  )
+		
+};
 </script>
+</div>
 </body>
 </html>
