--- a/app-code/com.barnsatble.fit/platforms/ios/www/account.html
+++ b/app-code/com.barnsatble.fit/platforms/ios/www/account.html
@@ -46,6 +46,10 @@
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">format_list_numbered</i>
             <span class="mdc-list-item__text">Leaderboard</span>
           </a>
+		  <a class="mdc-list-item" href="history.html">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">history</i>
+            <span class="mdc-list-item__text">History</span>
+          </a>
           <a class="mdc-list-item mdc-list-item--activated" href="account.html">
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">account_circle</i>
             <span class="mdc-list-item__text">Account</span>
