--- a/app-code/com.barnsatble.fit/platforms/ios/www/form.html
+++ b/app-code/com.barnsatble.fit/platforms/ios/www/form.html
@@ -33,7 +33,7 @@ function onFail(message) {
 			function onSuccess(imageURI) {
 			$body = $("body");
 			var elem = document.getElementById('placeholder');
-    		elem.src = "img/success.png";
+    		elem.src = imageURI;
         $("#insert").click(function() {
 			$('#loading-popup').modal('show');
 				var name = storage.getItem('acct');
@@ -59,6 +59,7 @@ function onFail(message) {
     console.log("Code = " + r.responseCode);
     console.log("Response = " + r.response);
     console.log("Sent = " + r.bytesSent);
+	alert("Submission Accepted");
 }
 
 var fail = function (error) {
@@ -127,6 +128,10 @@ $('#loading-popup').modal('hide');
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">format_list_numbered</i>
             <span class="mdc-list-item__text">Leaderboard</span>
           </a>
+		  <a class="mdc-list-item" href="history.html">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">history</i>
+            <span class="mdc-list-item__text">History</span>
+          </a>
           <a class="mdc-list-item" href="account.html">
             <i class="material-icons mdc-list-item__graphic" aria-hidden="true">account_circle</i>
             <span class="mdc-list-item__text">Account</span>
@@ -147,7 +152,7 @@ $('#loading-popup').modal('hide');
     <main class="main-content" id="main-content">
 		
       <div class="mdc-top-app-bar--fixed-adjust">
-		  <img src="img/placeholder.jpg" alt="placeholder" width="300" hight="600" id="placeholder">
+		  <img src= "img/placeholder.jpg" alt="placeholder" width="300" hight="600" id="placeholder">
 		  
         <div class="mdc-text-field steps_div" id="textfeild">
 			
