--- a/app-code/com.barnsatble.fit/www/account.html
+++ b/app-code/com.barnsatble.fit/www/account.html
@@ -47,7 +47,7 @@
             <span class="mdc-list-item__text">Leaderboard</span>
           </a>
 		  <a class="mdc-list-item" href="history.html">
-            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">account_circle</i>
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">history</i>
             <span class="mdc-list-item__text">History</span>
           </a>
           <a class="mdc-list-item mdc-list-item--activated" href="account.html">
