--- a/app-code/com.barnsatble.fit/platforms/ios/www/history.html
+++ b/app-code/com.barnsatble.fit/platforms/ios/www/history.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta name="viewport" content="width=device-width, hight=device-hight, initial-scale=1">
 	<!-- include other css files -->
 	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
 	<link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
@@ -82,7 +83,7 @@
 	<title>Barnstable Academy Fitness Tracker</title>
 	</head>
 	<body onLoad="CreateTableFromJSON()">
-	<aside class="mdc-drawer mdc-drawer--dismissible">
+	<aside class="mdc-drawer mdc-drawer--dismissible">  
       <div class="mdc-drawer__content">
         <nav class="mdc-list">
           <a class="mdc-list-item" href="form.html" aria-selected="true">
@@ -115,7 +116,7 @@
     </header>
 
     <main class="main-content" id="main-content">
-
+	
 	<div class="mdc-top-app-bar--fixed-adjust">
 	<div id="winers-table" align="center" class="mdc-card">
 		<div align="center">
@@ -123,7 +124,7 @@
     	<p id="showData">You havent submitted any steps yet.</p>
 		</div>
 	</div>
-</div>
+</div>		
 	</main>
 		</div>
 	</body>
