--- a/app-code/com.barnsatble.fit/www/history.html
+++ b/app-code/com.barnsatble.fit/www/history.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta name="viewport" content="width=device-width, hight=device-hight, initial-scale=1">
 	<!-- include other css files -->
 	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
 	<link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
