--- a/app-code/com.barnsatble.fit/www/readjson.html
+++ b/app-code/com.barnsatble.fit/www/readjson.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, hight=device-hight, initial-scale=1">
     <script type="text/javascript" src="js/jquery.js"></script>
 	<!-- include other css files -->
 	<link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
