--- a/server-code/Teacher Panel/index.html
+++ b/server-code/Teacher Panel/index.html
@@ -4,6 +4,7 @@
     <!-- include files -->
       <!-- include css -->
         <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="CSS/common.css">
         <link rel="stylesheet" href="CSS/index.css">
 
@@ -14,7 +15,6 @@
   </head>
 
   <body>
-      <!-- app bar header -->
       <header class="mdc-top-app-bar">
         <div class="mdc-top-app-bar__row">
           <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
@@ -23,18 +23,17 @@
         </div>
       </header>
 
-      <label class="mdc-text-field mdc-text-field--filled email">
-        <span class="mdc-text-field__ripple"></span>
-          <input type="text" class="mdc-text-field__input" aria-labelledby="email-label" name="email">
-        <span class="mdc-floating-label" id="email-label">E-Mail</span>
-        <span class="mdc-line-ripple"></span>
-      </label>
-      <label class="mdc-text-field mdc-text-field--filled password">
-        <span class="mdc-text-field__ripple"></span>
-          <input type="password" class="mdc-text-field__input" aria-labelledby="password-label" name="password">
-        <span class="mdc-floating-label" id="password-label">E-Mail</span>
-        <span class="mdc-line-ripple"></span>
-      </label>
+      <div class="mdc-text-field username">
+        <input type="email" class="mdc-text-field__input" id="username-input" name="username">
+        <label class="mdc-floating-label" for="username-input">E-Mail</label>
+        <div class="mdc-line-ripple"></div>
+      </div>
+      <div class="mdc-text-field password">
+        <input type="password" class="mdc-text-field__input" id="password-input" name="password">
+        <label class="mdc-floating-label" for="password-input">Password</label>
+        <div class="mdc-line-ripple"></div>
+      </div>
+
 
   </body>
 </html>
