--- a/server-code/Teacher Panel/index.html
+++ b/server-code/Teacher Panel/index.html
@@ -4,6 +4,7 @@
     <!-- include files -->
       <!-- include css -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://use.typekit.net/tip6mfg.css">
         <link rel="stylesheet" href="CSS/index.css">
 
       <!-- include JS -->
