added styling for login boxes

--- a/server-code/Teacher Panel/index.html
+++ b/server-code/Teacher Panel/index.html
@@ -15,11 +15,18 @@
 
   <body class="body">
     <div class="main-flex">
-<!------------------------------------------------------------------------------>
+<!---Top App Bar---------------------------------------------------------------->
       <div class="title-flex">
         <h1 class="title-text">Barnstable Academy Fitness Tracker: Teacher Contorl Panel</h1>
       </div>
-<!------------------------------------------------------------------------------>
+<!--Login Container------------------------------------------------------------->
+      <div class="login-container">
+        <form class="login-form">
+          <input type="email" class="form" name="email" placeholder="E-Mail"><br>
+          <input type="password" class="form" name="password" placeholder="Password" autocomplete="current-password"><br>
+        </form>
+      </div>
+
     </div>
   </body>
 </html>
